# horizon

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
content/: journeys.yaml  packs.yaml
content/checklists/: first-aid-kit.md  food-store.md  go-bag.md  home-emergency-prep.md  off-grid-power-build.md  share-and-barter.md  tools-and-materials.md  water-store.md
content/guides/: calc-area-volume.md  calc-energy-sizing.md  calc-fair-trade-value.md  calc-inventory-tracking.md  calc-materials-quantities.md  calc-structural-loads.md  calc-water-budget.md  cooking-bread-baking.md  cooking-ferments.md  cooking-foraged-food.md  cooking-one-pot-meals.md  cooking-plant-protein.md  cooking-preserving.md  cooking-solar-oven.md  cooperation-democratic-governance.md  cooperation-external-relations.md  cooperation-group-decisions.md  cooperation-resolving-conflict.md  cooperation-sharing-resources.md  crafts-cordage.md  crafts-fiber-and-textiles.md  crafts-make-tools.md  crafts-mending-textiles.md  crafts-tool-repair.md  culture-circle-dances.md  culture-group-songs.md  culture-no-gear-games.md  culture-simple-instruments.md  culture-storytelling.md  emergency-air-raid.md  emergency-blackout.md  emergency-conflict-safety.md  emergency-drought.md  emergency-earthquake.md  emergency-extinguish-fire.md  emergency-extreme-cold.md  emergency-extreme-heat.md  emergency-flood.md  emergency-no-car-household.md  emergency-pandemic.md  (+66 more)
content/md_skills/: answer-style.md  calculations-safety.md  checklist-water-safety.md  choosing-well.md  cooking-plant-based.md  cooperation-consensus.md  culture-language-inclusion.md  emergency-safety.md  health-safety.md  survival-safety.md  technology-safety.md  values.md
docs/: BACKLOG.md  api.md  authoring-content.md  operating.md
packaging/: horizon.service  install.sh
scripts/: get-horizon.sh
src/horizon/: __init__.py  config.py  db.py  main.py  models.py  seed.py
src/horizon/api/: __init__.py  ai.py  guides.py  journeys.py  recommend.py
src/horizon/scripts/: __init__.py  admin.py  content.py  menu.py
src/horizon/services/: __init__.py  diagnostics.py  ethics.py  eventlog.py  import_content.py  importer.py  llm.py  markdown.py  mbtiles.py  packs.py  pdf.py  rag.py  recommend.py  zim_reader.py
src/horizon/web/: __init__.py  admin.py  assets.py  maps.py  reference.py  routes.py
src/horizon/web/static/: VENDOR.md  alpine.min.js  app.css  htmx.min.js  print.css
src/horizon/web/templates/: assistant.html  base.html  checklist.html  checklists.html  guide.html  guide_pdf.html  guides.html  journey_detail.html  journeys.html  landing.html  maps_index.html  maps_pack.html  recommend.html  reference_article.html  reference_index.html  reference_pack.html
src/horizon/web/templates/admin/: _health_body.html  _pack_row.html  health.html  (+8 more)
tests/: conftest.py  test_admin.py  test_admin_cli.py  test_admin_import.py  test_admin_menu.py  test_admin_packs.py  test_ai.py  test_config.py  test_content_cli_import.py  test_diagnostics.py  test_ethics.py  test_importer.py  test_knowledge_api.py  test_low_power.py  test_markdown.py  test_mbtiles.py  test_packaging.py  test_packs.py  test_recommend.py  test_seed_checklists.py  test_seed_sync.py  test_smoke.py  test_web_maps.py  test_web_reference.py  test_web_toggle.py  test_web_ui.py  test_zim_reader.py
(+3 files in other folders)
