[project]
name = "horizon"
version = "0.1.0"
description = "Offline-first autonomy & rebuilding node: skill-tree journeys, visual guides, and a local AI assistant."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "horizon contributors" }]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",   # form uploads (admin guide upload)
    "markdown-it-py>=3.0",        # Markdown -> HTML
    "weasyprint>=61.0",           # HTML -> A4 PDF (print mode)
    "chromadb>=0.5",              # embedded vector DB
    "httpx>=0.27",                # Ollama / moral-core HTTP client
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
horizon-content = "horizon.scripts.content:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
