[project]
name = "horizon"
version = "0.4.0"
description = "Offline-first autonomy & rebuilding node: skill-tree journeys, visual guides, and a local AI assistant."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "horizon contributors" }]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",   # form uploads (admin guide upload)
    "markdown-it-py>=3.0",        # Markdown -> HTML
    "weasyprint>=61.0",           # HTML -> A4 PDF (print mode)
    "httpx>=0.27",                # Ollama / moral-core HTTP client
]

[project.optional-dependencies]
# Vector search for the AI assistant. Kept optional because chromadb pulls a
# large, mostly-unused tree (onnxruntime, tokenizers, huggingface-hub, grpcio,
# …) — horizon supplies its own embeddings (Ollama/llama.cpp) and never uses
# Chroma's bundled model. Without this extra, retrieval falls back to keyword
# search, so the app still boots and answers fully offline.
ai = [
    "chromadb>=0.5",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "chromadb>=0.5",   # exercise the vector path in tests when a model is present
]

[project.scripts]
horizon-admin = "horizon.scripts.admin:main"
horizon-content = "horizon.scripts.content:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Ship the server-rendered UI assets inside the wheel. These are not Python
# modules, so without this a real (non-editable) ``pip install`` drops them and
# the app crashes at startup mounting a missing ``web/static`` directory.
[tool.setuptools.package-data]
"horizon.web" = [
    "static/*",
    "static/**/*",
    "templates/*",
    "templates/**/*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
